[tool.poetry]
name = "graduation-research"
version = "0.1.0"
description = ""
authors = ["vodoomi <abe.mikito@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
selenium = "^4.22.0"
transformers = "^4.41.2"
sentence-transformers = "^3.0.1"
fugashi = "^1.3.2"
unidic-lite = "^1.0.8"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
